# my-stepper

./: .gitignore  CMakeLists.txt  README.md  keywords.txt  library.properties  my_stepper.cpp  my_stepper.h  my_stepper_test.cpp
cmake/: ArduinoToolchain.cmake
cmake/Platform/: Arduino.cmake  WindowsPaths.cmake
driver/: driver.c  driver.h  fixedpt.h  main.c  stepper.c  stepper.h
driver/Inc/: Command.h  Communication.h  Control.h  Motor.h  config.h  fixedpt.h  main.h  packet.h  stm32f1xx_hal_conf.h
driver/Src/: Command.c  Communication.c  Control.c  Motor.c  fixedpt.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
processing/: sketch_200914a.pde
processing/sketch_200914a/: sketch_200914a.pde
processing/sketch_200915b/: sketch_200915b.pde
sim/: CMakeLists.txt  main.cpp  my_stepper.h  下位机程序设计文档.docx
